--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -15,7 +15,7 @@
     max-width: 400px;
     background-color: white;
     border-radius: 10px;
-    padding: 2rem;
+    padding: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
@@ -51,10 +51,11 @@
     margin-bottom: 0.5rem;
   }
   
-  .form-group input {
-    width: 87%;
+  .form-group input 
+  {
+    width: 90%;
     padding: 0.75rem 1rem;
-    border: 1px solid #d1d5db;
+    border: 1px solid #1111119c;
     border-radius: 8px;
     outline: none;
     transition: all 0.2s ease;
@@ -104,16 +105,15 @@
   
   /* Media Queries */
   @media (max-width: 640px) {
-    .register-card {
-      padding: 1.5rem;
-    }
-    
-    .register-card h2 {
+   
+    .register-card h2 
+    {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
     }
     
-    .form-group {
+    .form-group 
+    {
       margin-bottom: 1rem;
     }
   }
