--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -54,9 +54,9 @@
 
 .form-group input 
 {
-  width: 87%;
+  width: 90%;
   padding: 0.75rem 1rem;
-  border: 1px solid #d1d5db;
+  border: 1px solid #1111119c;
   border-radius: 8px;
   outline: none;
   transition: all 0.2s ease;
